[package]
name = "git-service"
version = "0.1.0"
authors = ["Andrei Neculaesei <neculaesei@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10.1"
hyper = "0.14.12"
log = "0.4.8"
pretty_env_logger = "0.3.1"
failure = "0.1.5"
serde_json = "1.0.41"
serde = { version = "1.0.101", features = ["derive"] }
regex = "1.3.1"
